2009-04-02  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24930
        [Gtk] ISO files content is displayed inside the webview instead of being downloaded

        Also sniff content of types declared as text/plain. This is
        justified by the fact that it is common to have Apache HTTP
        servers configured to send text/plain as Content-Type by default.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::gotHeadersCallback):

Canonical link: https://commits.webkit.org/34226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42171 268f45cc-cd09-0410-ab3c-d52691b4dbfc